--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Test Clicker</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>💎 Diamond, Gold & Emerald Clicker + Ranks</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background: #f0f8ff;
+      background: linear-gradient(135deg, #d7ecff, #f5ffff);
       padding: 20px;
     }
+    h1 { margin-bottom: 10px; }
 
     button {
-      font-size: 20px;
-      padding: 12px 25px;
-      margin: 10px;
+      font-size: 18px;
+      padding: 10px 22px;
+      margin: 8px;
       border: none;
       border-radius: 10px;
       cursor: pointer;
@@ -21,71 +24,71 @@
       user-select: none;
     }
 
-    #diamond-button {
-      background-color: #00bfff;
-    }
-    #diamond-button:hover {
-      background-color: #1e90ff;
-    }
+    #diamond-button { background-color: #00bfff; }
+    #diamond-button:hover { background-color: #1e90ff; }
 
-    #gold-button {
-      background-color: #daa520;
-    }
-    #gold-button:hover {
-      background-color: #b8860b;
-    }
+    #gold-button { background-color: #daa520; }
+    #gold-button:hover { background-color: #b8860b; }
 
-    #emerald-button {
-      background-color: #50c878;
-    }
-    #emerald-button:hover {
-      background-color: #3aa655;
-    }
+    #emerald-button { background-color: #50c878; }
+    #emerald-button:hover { background-color: #3aa655; }
 
-    #buy-gold-button {
-      background-color: #28a745;
-    }
-    #buy-gold-button:disabled {
-      background-color: #94d3a2;
-      cursor: not-allowed;
-    }
-    #buy-gold-button:hover:not(:disabled) {
-      background-color: #218838;
-    }
+    #buy-gold-button, #upgrade-diamond, #upgrade-gold, #upgrade-emerald { background-color: #28a745; }
+    #buy-gold-button:hover, #upgrade-diamond:hover, #upgrade-gold:hover, #upgrade-emerald:hover { background-color: #218838; }
 
     #buy-emerald-button {
       background-color: #2e8b57;
     }
-    #buy-emerald-button:disabled {
-      background-color: #a0c8b4;
-      cursor: not-allowed;
-    }
-    #buy-emerald-button:hover:not(:disabled) {
+    #buy-emerald-button:hover {
       background-color: #1e5f3a;
     }
 
-    #counters {
-      font-size: 28px;
-      margin: 15px 0;
+    #counters { font-size: 26px; margin: 10px 0; }
+    .cps-display { font-size: 16px; margin-bottom: 10px; color: #444; }
+    #text-container { margin-top: 20px; height: 30px; font-size: 22px; color: #333; }
+
+    /* Rank UI */
+    #rank-button {
+      position: fixed;
+      top: 15px;
+      left: 15px;
+      background: rgba(0,0,0,0.6);
+      color: white;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      z-index: 150;
+      font-size: 14px;
+      user-select: none;
     }
 
-    .cps-display {
-      font-size: 18px;
-      margin: 5px 0 15px 0;
-      color: #444;
+    #rank-panel {
+      position: fixed;
+      top: 60px;
+      left: 15px;
+      background: rgba(0,0,0,0.85);
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+      display: none;
+      z-index: 150;
+      max-height: 320px;
+      overflow-y: auto;
+      font-size: 14px;
+      min-width: 160px;
     }
 
-    #text-container {
-      margin-top: 20px;
-      height: 30px;
-      font-size: 22px;
-      color: #555;
-      min-height: 30px;
+    #rank-panel h3 {
+      margin: 0 0 6px 0;
+      font-size: 16px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>💎 Diamond, Gold & Emerald Clicker (Multiple Emeralds)</h1>
+  <h1>💎 Diamond, Gold & Emerald Clicker</h1>
+
+  <div id="playerName"></div>
 
   <div id="counters">
     Diamonds: <span id="diamond-count">0</span><br>
@@ -93,167 +96,236 @@
     Emeralds: <span id="emerald-count">0</span>
   </div>
 
-  <button id="diamond-button">Click to Get 💎</button>
-  <div class="cps-display" id="diamond-cps">Diamond CPS: Left: 0 | Right: 0</div>
+  <button id="diamond-button">Click 💎</button>
+  <div class="cps-display" id="diamond-cps">Diamond CPS: L:0 | R:0</div>
 
-  <button id="gold-button" disabled>Click to Get Gold 🪙</button>
-  <div class="cps-display" id="gold-cps">Gold CPS: Left: 0 | Right: 0</div>
+  <button id="gold-button" disabled>Click 🪙</button>
+  <div class="cps-display" id="gold-cps">Gold CPS: L:0 | R:0</div>
 
-  <button id="emerald-button" disabled>Click to Get Emerald 💚</button>
-  <div class="cps-display" id="emerald-cps">Emerald CPS: Left: 0 | Right: 0</div>
+  <button id="emerald-button" disabled>Click 💚</button>
+  <div class="cps-display" id="emerald-cps">Emerald CPS: L:0 | R:0</div>
 
   <br>
-  <button id="buy-gold-button">Buy Gold for 100 Diamonds</button>
-  <button id="buy-emerald-button">Buy Emerald for 1000 Diamonds & 700 Gold</button>
+  <button id="buy-gold-button">Buy Gold (100 💎)</button>
+  <button id="buy-emerald-button">Buy Emerald (1000 💎 + 700 🪙)</button>
+
+  <br><hr><br>
+  <h2>🔼 Upgrades</h2>
+  <button id="upgrade-diamond">Upgrade Diamond (Cost: 500,000 💎)</button><br>
+  <button id="upgrade-gold" disabled>Upgrade Gold (Cost: 10,000,000 🪙)</button><br>
+  <button id="upgrade-emerald" disabled>Upgrade Emerald (Cost: 5 💚)</button>
 
   <div id="text-container"></div>
 
-  <script>
-    let diamonds = 0;
-    let gold = 0;
-    let emeralds = 0;
+  <div id="rank-button">Ranks (Online)</div>
+  <div id="rank-panel"></div>
 
-    // CPS counters (counts clicks within current second)
-    const cps = {
-      diamond: { left: 0, right: 0 },
-      gold: { left: 0, right: 0 },
-      emerald: { left: 0, right: 0 }
-    };
+  <script type="module">
+    /* ---------- Firebase Setup ---------- */
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getFirestore, doc, setDoc, getDoc, collection, query, orderBy, limit, getDocs, updateDoc } 
+      from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+    import { getAuth, signInAnonymously, onAuthStateChanged } 
+      from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
 
-    // Load saved counts
-    if(localStorage.getItem("diamondCount")) {
-      diamonds = parseInt(localStorage.getItem("diamondCount"));
+    const firebaseConfig = {
+    apiKey: "AIzaSyB7c4UCU7qpVecl5JM-wRSMnqFz9DCjdlA",
+    authDomain: "diamondclicker-b3a0a.firebaseapp.com",
+    projectId: "diamondclicker-b3a0a",
+    storageBucket: "diamondclicker-b3a0a.firebasestorage.app",
+    messagingSenderId: "334913006559",
+    appId: "1:334913006559:web:f1b73789e56c61d4a8b26a"
+  };
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const auth = getAuth(app);
+
+    let currentUser = null;
+    signInAnonymously(auth);
+    onAuthStateChanged(auth, user => {
+      currentUser = user;
+      console.log("Signed in as", user.uid);
+    });
+
+    /* ---------- Player Setup ---------- */
+    let playerName = localStorage.getItem("playerName");
+    while (!playerName || playerName.trim() === "") {
+      playerName = prompt("Masukkan nama kamu (tidak boleh kosong):");
     }
-    if(localStorage.getItem("goldCount")) {
-      gold = parseInt(localStorage.getItem("goldCount"));
-    }
-    if(localStorage.getItem("emeraldCount")) {
-      emeralds = parseInt(localStorage.getItem("emeraldCount"));
+    localStorage.setItem("playerName", playerName);
+    document.getElementById("playerName").textContent = `👤 Player: ${playerName}`;
+
+    /* ---------- Game Variables ---------- */
+    let diamonds = 0, gold = 0, emeralds = 0;
+    let diamondUpgradeLevel = 0, goldUpgradeLevel = 0, emeraldUpgradeLevel = 0;
+    let diamondPerClick = 1, goldPerClick = 1, emeraldPerClick = 1;
+    let diamondUpgradeCost = 500000, goldUpgradeCost = 10000000, emeraldUpgradeCost = 5;
+    const cps = { diamond:{left:0,right:0}, gold:{left:0,right:0}, emerald:{left:0,right:0} };
+
+    /* ---------- Load Saved Progress ---------- */
+    if(localStorage.getItem("diamondCount")) diamonds = parseInt(localStorage.getItem("diamondCount"));
+    if(localStorage.getItem("goldCount")) gold = parseInt(localStorage.getItem("goldCount"));
+    if(localStorage.getItem("emeraldCount")) emeralds = parseInt(localStorage.getItem("emeraldCount"));
+    if(localStorage.getItem("diamondUpgradeLevel")) diamondUpgradeLevel = parseInt(localStorage.getItem("diamondUpgradeLevel"));
+    if(localStorage.getItem("goldUpgradeLevel")) goldUpgradeLevel = parseInt(localStorage.getItem("goldUpgradeLevel"));
+    if(localStorage.getItem("emeraldUpgradeLevel")) emeraldUpgradeLevel = parseInt(localStorage.getItem("emeraldUpgradeLevel"));
+
+    updateStats();
+
+    /* ---------- Button Setup ---------- */
+    function setupClick(btnId, resName, func) {
+      const btn = document.getElementById(btnId);
+      btn.addEventListener('click', () => { func(); cps[resName].left++; });
+      btn.addEventListener('contextmenu', e => { e.preventDefault(); func(); cps[resName].right++; });
     }
 
-    updateDisplay();
-    updateButtons();
-
-    function setupClickHandlers(buttonId, resourceName, addFunction) {
-      const btn = document.getElementById(buttonId);
-      btn.addEventListener('click', (e) => {
-        addFunction();
-        cps[resourceName].left++;
-      });
-      btn.addEventListener('contextmenu', (e) => {
-        e.preventDefault();
-        addFunction();
-        cps[resourceName].right++;
-      });
-    }
-
-    setupClickHandlers('diamond-button', 'diamond', addDiamond);
-    setupClickHandlers('gold-button', 'gold', addGold);
-    setupClickHandlers('emerald-button', 'emerald', addEmerald);
+    setupClick('diamond-button', 'diamond', addDiamond);
+    setupClick('gold-button', 'gold', addGold);
+    setupClick('emerald-button', 'emerald', addEmerald);
 
     document.getElementById('buy-gold-button').addEventListener('click', buyGold);
     document.getElementById('buy-emerald-button').addEventListener('click', buyEmerald);
+    document.getElementById('upgrade-diamond').addEventListener('click', upgradeDiamond);
+    document.getElementById('upgrade-gold').addEventListener('click', upgradeGold);
+    document.getElementById('upgrade-emerald').addEventListener('click', upgradeEmerald);
 
+    /* ---------- Click Actions ---------- */
     function addDiamond() {
-      diamonds++;
-      saveCounts();
-      updateDisplay();
-      updateButtons();
-      showMessage("You got a 💎!");
+      diamonds += diamondPerClick;
+      save(); updateStats();
+      showMsg(`+${diamondPerClick} 💎`);
+      saveHighScore();
+    }
+    function addGold() { if (gold>0){gold+=goldPerClick;save();updateStats();showMsg(`+${goldPerClick} 🪙`);} }
+    function addEmerald(){if(emeralds>0){emeralds+=emeraldPerClick;save();updateStats();showMsg(`+${emeraldPerClick} 💚`);} }
+
+    /* ---------- Buy Unlocks ---------- */
+    function buyGold(){if(diamonds>=100&&gold===0){diamonds-=100;gold=1;showMsg("Gold unlocked!");}else showMsg("Not enough 💎!");save();updateStats();}
+    function buyEmerald(){if(diamonds>=1000&&gold>=700){diamonds-=1000;gold-=700;emeralds++;showMsg("Emerald unlocked!");}else showMsg("Not enough resources!");save();updateStats();}
+
+    /* ---------- Upgrades ---------- */
+    function upgradeDiamond(){
+      if(diamonds>=diamondUpgradeCost){
+        diamonds-=diamondUpgradeCost;
+        diamondUpgradeLevel++;
+        diamondPerClick*=2;
+        if(diamondUpgradeLevel===1)diamondPerClick+=2;
+        diamondUpgradeCost*=5;
+        showMsg(`Diamond upgraded Lv.${diamondUpgradeLevel}!`);
+      } else showMsg("Not enough 💎!");
+      save();updateStats();
     }
 
-    function addGold() {
-      if (gold > 0) {
-        gold++;
-        saveCounts();
-        updateDisplay();
-        showMessage("You got a 🪙!");
-      }
+    function upgradeGold(){
+      if(gold>=goldUpgradeCost){
+        gold-=goldUpgradeCost;
+        goldUpgradeLevel++;
+        goldPerClick*=2;
+        if(goldUpgradeLevel===1)goldPerClick+=4;
+        goldUpgradeCost*=5;
+        showMsg(`Gold upgraded Lv.${goldUpgradeLevel}!`);
+      } else showMsg("Not enough 🪙!");
+      save();updateStats();
     }
 
-    function addEmerald() {
-      if (emeralds > 0) {
-        emeralds++;
-        saveCounts();
-        updateDisplay();
-        showMessage("You got a 💚!");
-      }
+    function upgradeEmerald(){
+      if(emeralds>=emeraldUpgradeCost){
+        emeralds-=emeraldUpgradeCost;
+        emeraldUpgradeLevel++;
+        emeraldPerClick*=2;
+        emeraldUpgradeCost*=5;
+        showMsg(`Emerald upgraded Lv.${emeraldUpgradeLevel}!`);
+      } else showMsg("Not enough 💚!");
+      save();updateStats();
     }
 
-    function buyGold() {
-      if (diamonds >= 100 && gold === 0) {
-        diamonds -= 100;
-        gold = 1;
-        saveCounts();
-        updateDisplay();
-        updateButtons();
-        showMessage("Gold purchased! You can now click gold 🪙.");
-      } else if (gold > 0) {
-        showMessage("You already own gold!");
-      } else {
-        showMessage("Not enough diamonds to buy gold!");
-      }
-    }
-
-    function buyEmerald() {
-      if (diamonds >= 1000 && gold >= 700) {
-        diamonds -= 1000;
-        gold -= 700;
-        emeralds++;
-        saveCounts();
-        updateDisplay();
-        updateButtons();
-        showMessage("Emerald purchased! You can now click emerald 💚.");
-      } else {
-        showMessage("Not enough diamonds or gold to buy emerald!");
-      }
-    }
-
-    function saveCounts() {
+    /* ---------- Save & UI ---------- */
+    function save(){
       localStorage.setItem("diamondCount", diamonds);
       localStorage.setItem("goldCount", gold);
       localStorage.setItem("emeraldCount", emeralds);
+      localStorage.setItem("diamondUpgradeLevel", diamondUpgradeLevel);
+      localStorage.setItem("goldUpgradeLevel", goldUpgradeLevel);
+      localStorage.setItem("emeraldUpgradeLevel", emeraldUpgradeLevel);
     }
 
-    function updateDisplay() {
-      document.getElementById("diamond-count").innerText = diamonds;
-      document.getElementById("gold-count").innerText = gold;
-      document.getElementById("emerald-count").innerText = emeralds;
+    function updateStats(){
+      document.getElementById("diamond-count").innerText = diamonds.toLocaleString();
+      document.getElementById("gold-count").innerText = gold.toLocaleString();
+      document.getElementById("emerald-count").innerText = emeralds.toLocaleString();
+
+      document.getElementById("upgrade-diamond").innerText=`Upgrade Diamond (Lv ${diamondUpgradeLevel}) - Cost: ${diamondUpgradeCost.toLocaleString()} 💎`;
+      document.getElementById("upgrade-gold").innerText=`Upgrade Gold (Lv ${goldUpgradeLevel}) - Cost: ${goldUpgradeCost.toLocaleString()} 🪙`;
+      document.getElementById("upgrade-emerald").innerText=`Upgrade Emerald (Lv ${emeraldUpgradeLevel}) - Cost: ${emeraldUpgradeCost.toLocaleString()} 💚`;
+
+      document.getElementById("gold-button").disabled=gold===0;
+      document.getElementById("emerald-button").disabled=emeralds===0;
+      document.getElementById("upgrade-gold").disabled=gold===0;
+      document.getElementById("upgrade-emerald").disabled=emeralds===0;
     }
 
-    function updateButtons() {
-      // buy gold only if diamonds >=100 and no gold yet
-      document.getElementById("buy-gold-button").disabled = !(diamonds >= 100 && gold === 0);
-
-      // buy emerald enabled if diamonds>=1000 and gold >=700 (can buy multiple)
-      document.getElementById("buy-emerald-button").disabled = !(diamonds >= 1000 && gold >= 700);
-
-      document.getElementById("gold-button").disabled = (gold === 0);
-      document.getElementById("emerald-button").disabled = (emeralds === 0);
+    function showMsg(text){
+      const box=document.getElementById("text-container");
+      box.innerText=text;
+      setTimeout(()=>box.innerText="",1500);
     }
 
-    function showMessage(text) {
-      const container = document.getElementById("text-container");
-      container.innerText = text;
-      setTimeout(() => {
-        container.innerText = "";
-      }, 1500);
+    setInterval(()=>{
+      document.getElementById("diamond-cps").innerText=`Diamond CPS: L:${cps.diamond.left} | R:${cps.diamond.right}`;
+      document.getElementById("gold-cps").innerText=`Gold CPS: L:${cps.gold.left} | R:${cps.gold.right}`;
+      document.getElementById("emerald-cps").innerText=`Emerald CPS: L:${cps.emerald.left} | R:${cps.emerald.right}`;
+      cps.diamond={left:0,right:0};cps.gold={left:0,right:0};cps.emerald={left:0,right:0};
+    },1000);
+
+    /* ---------- Firebase High Score ---------- */
+    async function saveHighScore(){
+      if(!currentUser)return;
+      const ref=doc(db,"diamondScores",currentUser.uid);
+      const snap=await getDoc(ref);
+      if(!snap.exists()){
+        await setDoc(ref,{name:playerName,diamonds});
+      }else{
+        const oldScore=snap.data().diamonds||0;
+        if(diamonds>oldScore){
+          await updateDoc(ref,{name:playerName,diamonds});
+        }
+      }
     }
 
-    // Update CPS display every second and reset counts
-    setInterval(() => {
-      document.getElementById("diamond-cps").innerText = `Diamond CPS: Left: ${cps.diamond.left} | Right: ${cps.diamond.right}`;
-      document.getElementById("gold-cps").innerText = `Gold CPS: Left: ${cps.gold.left} | Right: ${cps.gold.right}`;
-      document.getElementById("emerald-cps").innerText = `Emerald CPS: Left: ${cps.emerald.left} | Right: ${cps.emerald.right}`;
+    /* ---------- Rank Panel ---------- */
+    const rankButton=document.getElementById("rank-button");
+    const rankPanel=document.getElementById("rank-panel");
+    let rankRefreshInterval=null;
 
-      // Reset CPS counts for next second
-      cps.diamond.left = 0;
-      cps.diamond.right = 0;
-      cps.gold.left = 0;
-      cps.gold.right = 0;
-      cps.emerald.left = 0;
-      cps.emerald.right = 0;
-    }, 1000);
+    async function fetchLeaderboard(){
+      const q=query(collection(db,"diamondScores"),orderBy("diamonds","desc"),limit(30));
+      const snap=await getDocs(q);
+      return snap.docs.map((doc,i)=>{
+        const data=doc.data();
+        return `${i+1}. ${data.name||"Anon"} — ${data.diamonds.toLocaleString()} 💎`;
+      });
+    }
+
+    rankButton.addEventListener("click",async()=>{
+      if(rankPanel.style.display==="block"){
+        rankPanel.style.display="none";
+        clearInterval(rankRefreshInterval);
+        return;
+      }
+      rankPanel.style.display="block";
+      rankPanel.innerHTML="<h3>Ranks (Online)</h3><div>Loading…</div>";
+
+      async function refreshRanks(){
+        const list=await fetchLeaderboard();
+        const time=new Date().toLocaleTimeString();
+        const myRank=list.findIndex(line=>line.includes(playerName));
+        const rankText=myRank>=0?`<br><b>👑 Your Rank: #${myRank+1}</b>`:"";
+        rankPanel.innerHTML=`<h3>Ranks (Online)</h3>${list.join("<br>")}${rankText}<br><br><small>Last updated: ${time}</small>`;
+      }
+
+      await refreshRanks();
+      rankRefreshInterval=setInterval(refreshRanks,10000);
+    });
   </script>
 </body>
 </html>
