--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Diamond Clicker</title>
+  <title>Clicker with Aura System + Ranks (Fixed)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -34,7 +34,6 @@
     #text-container { margin-top: 15px; font-size: 20px; color: #555; min-height: 30px; }
     #aura-section { margin-top: 30px; background: #fff; padding: 20px; border-radius: 15px; box-shadow: 0 0 15px rgba(0,0,0,0.1); }
 
-    /* Rank UI */
     #rank-button {
       position: fixed;
       top: 15px;
@@ -96,10 +95,10 @@
   <button class="upgrade-button" id="upgrade-diamond">Upgrade Diamond (Cost: 500,000 💎)</button>
   <div>Diamond Upgrade Level: <span id="diamond-upgrade-level">0</span></div>
 
-  <button class="upgrade-button" id="upgrade-gold">Upgrade Gold (Cost: 10,000,000 🪙)</button>
+  <button class="upgrade-button" id="upgrade-gold" disabled>Upgrade Gold (Cost: 10,000,000 🪙)</button>
   <div>Gold Upgrade Level: <span id="gold-upgrade-level">0</span></div>
 
-  <button class="upgrade-button" id="upgrade-emerald">Upgrade Emerald (Cost: 30,000,000 💚)</button>
+  <button class="upgrade-button" id="upgrade-emerald" disabled>Upgrade Emerald (Cost: 30,000,000 💚)</button>
   <div>Emerald Upgrade Level: <span id="emerald-upgrade-level">0</span></div>
 
   <div id="aura-section">
@@ -117,7 +116,6 @@
   <div id="rank-panel"></div>
 
   <script type="module">
-    /* ---------- Firebase Setup ---------- */
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
     import { getFirestore, doc, setDoc, getDoc, collection, query, orderBy, limit, getDocs, updateDoc }
       from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
@@ -125,22 +123,23 @@
       from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
 
     const firebaseConfig = {
-  apiKey: "AIzaSyB7c4UCU7qpVecl5JM-wRSMnqFz9DCjdlA",
-  authDomain: "diamondclicker-b3a0a.firebaseapp.com",
-  projectId: "diamondclicker-b3a0a",
-  storageBucket: "diamondclicker-b3a0a.firebasestorage.app",
-  messagingSenderId: "334913006559",
-  appId: "1:334913006559:web:f1b73789e56c61d4a8b26a"
+     apiKey: "AIzaSyB7c4UCU7qpVecl5JM-wRSMnqFz9DCjdlA",
+     authDomain: "diamondclicker-b3a0a.firebaseapp.com",
+     projectId: "diamondclicker-b3a0a",
+     storageBucket: "diamondclicker-b3a0a.firebasestorage.app",
+     messagingSenderId: "334913006559",
+     appId: "1:334913006559:web:f1b73789e56c61d4a8b26a"
 };
+
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
     const auth = getAuth(app);
 
     let currentUser = null;
     signInAnonymously(auth);
-    onAuthStateChanged(auth, user => { currentUser = user; });
+    onAuthStateChanged(auth, user => currentUser = user);
 
-    /* ---------- Player Setup ---------- */
+    // Player setup
     let playerName = localStorage.getItem("playerName");
     while (!playerName || playerName.trim() === "") {
       playerName = prompt("Enter your name:");
@@ -148,7 +147,7 @@
     localStorage.setItem("playerName", playerName);
     document.getElementById("playerName").textContent = `👤 Player: ${playerName}`;
 
-    /* ---------- Game Variables ---------- */
+    // Variables
     let diamonds = parseInt(localStorage.getItem("diamondCount") || "0");
     let gold = parseInt(localStorage.getItem("goldCount") || "0");
     let emeralds = parseInt(localStorage.getItem("emeraldCount") || "0");
@@ -177,23 +176,28 @@
       return aura ? aura.bonus : { diamond:0, gold:0, emerald:0 };
     }
 
-    /* ---------- Click Actions ---------- */
-    function addDiamond() {
-      const bonus = getAuraBonus();
-      diamonds += (1 + bonus.diamond);
+    // Clicks
+    function addDiamond() { const b=getAuraBonus(); diamonds += (1+b.diamond); save(); updateDisplay(); saveHighScore(); }
+    function addGold() { if (gold>0){const b=getAuraBonus(); gold += (1+b.gold); save(); updateDisplay();} else showMsg("You need to unlock gold!"); }
+    function addEmerald() { if (emeralds>0){const b=getAuraBonus(); emeralds += (1+b.emerald); save(); updateDisplay();} else showMsg("You need to unlock emerald!"); }
+
+    // Buy unlocks
+    function buyGold() {
+      if (diamonds >= 100 && gold === 0) {
+        diamonds -= 100; gold = 1;
+        showMsg("Gold unlocked!");
+      } else showMsg("Not enough diamonds!");
       save(); updateDisplay();
-      saveHighScore();
     }
 
-    function addGold() { const bonus=getAuraBonus(); gold+=(1+bonus.gold); save(); updateDisplay(); }
-    function addEmerald() { const bonus=getAuraBonus(); emeralds+=(1+bonus.emerald); save(); updateDisplay(); }
-
-    /* ---------- Roll Aura ---------- */
-    function getAuraByChance() {
-      const rand = Math.random() * 100; let sum = 0;
-      for (let aura of auraList) { sum += aura.rate; if (rand <= sum) return aura; }
-      return auraList[0];
+    function buyEmerald() {
+      if (diamonds >= 1000 && gold >= 700 && emeralds === 0) {
+        diamonds -= 1000; gold -= 700; emeralds = 1;
+        showMsg("Emerald unlocked!");
+      } else showMsg("Need more 💎 or 🪙!");
+      save(); updateDisplay();
     }
+
     function rollAura() {
       if (emeralds < 2000000) return showMsg("Not enough Emeralds!");
       emeralds -= 2000000;
@@ -203,83 +207,98 @@
       save(); renderOwnedAuras(); updateDisplay();
     }
 
-    function equipAura(name){equippedAura=name;save();updateDisplay();showMsg(`✨ Equipped ${name}!`);}
+    function getAuraByChance() {
+      const rand = Math.random() * 100; let sum = 0;
+      for (let aura of auraList) { sum += aura.rate; if (rand <= sum) return aura; }
+      return auraList[0];
+    }
 
-    /* ---------- Save & Display ---------- */
-    function save(){
+    function equipAura(name) { equippedAura = name; save(); updateDisplay(); showMsg(`✨ Equipped ${name}!`); }
+
+    function save() {
       localStorage.setItem("diamondCount", diamonds);
       localStorage.setItem("goldCount", gold);
       localStorage.setItem("emeraldCount", emeralds);
       localStorage.setItem("ownedAuras", JSON.stringify(ownedAuras));
       localStorage.setItem("equippedAura", equippedAura);
+      localStorage.setItem("diamondUpgradeLevel", diamondUpgradeLevel);
+      localStorage.setItem("goldUpgradeLevel", goldUpgradeLevel);
+      localStorage.setItem("emeraldUpgradeLevel", emeraldUpgradeLevel);
     }
 
-    function updateDisplay(){
-      document.getElementById("diamond-count").innerText=diamonds.toLocaleString();
-      document.getElementById("gold-count").innerText=gold.toLocaleString();
-      document.getElementById("emerald-count").innerText=emeralds.toLocaleString();
-      document.getElementById("equipped-aura").innerText=equippedAura;
+    function updateDisplay() {
+      document.getElementById("diamond-count").innerText = diamonds.toLocaleString();
+      document.getElementById("gold-count").innerText = gold.toLocaleString();
+      document.getElementById("emerald-count").innerText = emeralds.toLocaleString();
+      document.getElementById("equipped-aura").innerText = equippedAura;
+      document.getElementById("gold-button").disabled = gold <= 0;
+      document.getElementById("emerald-button").disabled = emeralds <= 0;
+      document.getElementById("upgrade-gold").disabled = gold <= 0;
+      document.getElementById("upgrade-emerald").disabled = emeralds <= 0;
     }
 
-    function renderOwnedAuras(){
-      const div=document.getElementById("owned-auras");
-      div.innerHTML="";
-      ownedAuras.forEach(aura=>{
-        const btn=document.createElement("button");
-        btn.className="equip-button";
-        btn.innerText=aura+" (Equip)";
-        btn.onclick=()=>equipAura(aura);
+    function renderOwnedAuras() {
+      const div = document.getElementById("owned-auras");
+      div.innerHTML = "";
+      ownedAuras.forEach(aura => {
+        const btn = document.createElement("button");
+        btn.className = "equip-button";
+        btn.innerText = aura + " (Equip)";
+        btn.onclick = () => equipAura(aura);
         div.appendChild(btn);
       });
     }
 
-    function showMsg(msg){const el=document.getElementById("text-container");el.innerText=msg;setTimeout(()=>el.innerText="",2000);}
+    function showMsg(msg) { const el = document.getElementById("text-container"); el.innerText = msg; setTimeout(() => el.innerText = "", 2000); }
 
-    document.getElementById("diamond-button").onclick=addDiamond;
-    document.getElementById("gold-button").onclick=addGold;
-    document.getElementById("emerald-button").onclick=addEmerald;
-    document.getElementById("roll-aura-button").onclick=rollAura;
+    document.getElementById("diamond-button").onclick = addDiamond;
+    document.getElementById("gold-button").onclick = addGold;
+    document.getElementById("emerald-button").onclick = addEmerald;
+    document.getElementById("buy-gold-button").onclick = buyGold;
+    document.getElementById("buy-emerald-button").onclick = buyEmerald;
+    document.getElementById("roll-aura-button").onclick = rollAura;
+
     renderOwnedAuras(); updateDisplay();
 
-    /* ---------- Save High Score ---------- */
-    async function saveHighScore(){
-      if(!currentUser)return;
-      const ref=doc(db,"auraScores",currentUser.uid);
-      const snap=await getDoc(ref);
-      if(!snap.exists()) await setDoc(ref,{name:playerName,diamonds});
-      else {
-        const old=snap.data().diamonds||0;
-        if(diamonds>old) await updateDoc(ref,{name:playerName,diamonds});
-      }
+    // Firebase leaderboard
+    async function saveHighScore() {
+      if (!currentUser) return;
+      const ref = doc(db, "auraScores", currentUser.uid);
+      const snap = await getDoc(ref);
+      if (!snap.exists()) await setDoc(ref, { name: playerName, diamonds });
+      else if (diamonds > (snap.data().diamonds || 0)) await updateDoc(ref, { name: playerName, diamonds });
     }
 
-    /* ---------- Ranks ---------- */
-    const rankButton=document.getElementById("rank-button");
-    const rankPanel=document.getElementById("rank-panel");
-    let rankRefreshInterval=null;
+    const rankButton = document.getElementById("rank-button");
+    const rankPanel = document.getElementById("rank-panel");
+    let rankRefreshInterval = null;
 
-    async function fetchLeaderboard(){
-      const q=query(collection(db,"auraScores"),orderBy("diamonds","desc"),limit(30));
-      const snap=await getDocs(q);
-      return snap.docs.map((doc,i)=>{
-        const data=doc.data();
-        return `${i+1}. ${data.name||"Anon"} — ${data.diamonds.toLocaleString()} 💎`;
+    async function fetchLeaderboard() {
+      const q = query(collection(db, "auraScores"), orderBy("diamonds", "desc"), limit(30));
+      const snap = await getDocs(q);
+      return snap.docs.map((doc, i) => {
+        const data = doc.data();
+        return `${i + 1}. ${data.name || "Anon"} — ${data.diamonds.toLocaleString()} 💎`;
       });
     }
 
-    rankButton.addEventListener("click",async()=>{
-      if(rankPanel.style.display==="block"){rankPanel.style.display="none";clearInterval(rankRefreshInterval);return;}
-      rankPanel.style.display="block";
-      rankPanel.innerHTML="<h3>Ranks (Online)</h3><div>Loading…</div>";
-      async function refreshRanks(){
-        const list=await fetchLeaderboard();
-        const time=new Date().toLocaleTimeString();
-        const myRank=list.findIndex(line=>line.includes(playerName));
-        const rankText=myRank>=0?`<br><b>👑 Your Rank: #${myRank+1}</b>`:"";
-        rankPanel.innerHTML=`<h3>Ranks (Online)</h3>${list.join("<br>")}${rankText}<br><br><small>Updated: ${time}</small>`;
+    rankButton.addEventListener("click", async () => {
+      if (rankPanel.style.display === "block") {
+        rankPanel.style.display = "none";
+        clearInterval(rankRefreshInterval);
+        return;
+      }
+      rankPanel.style.display = "block";
+      rankPanel.innerHTML = "<h3>Ranks (Online)</h3><div>Loading…</div>";
+      async function refreshRanks() {
+        const list = await fetchLeaderboard();
+        const time = new Date().toLocaleTimeString();
+        const myRank = list.findIndex(line => line.includes(playerName));
+        const rankText = myRank >= 0 ? `<br><b>👑 Your Rank: #${myRank + 1}</b>` : "";
+        rankPanel.innerHTML = `<h3>Ranks (Online)</h3>${list.join("<br>")}${rankText}<br><br><small>Updated: ${time}</small>`;
       }
       await refreshRanks();
-      rankRefreshInterval=setInterval(refreshRanks,10000);
+      rankRefreshInterval = setInterval(refreshRanks, 10000);
     });
   </script>
 </body>
