--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Clicker with Aura UPDATE</title>
+  <title>Diamond Clicker with Aura UPDATE</title>
   <style>
     body {
       font-family: Arial, sans-serif;
