--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Diamond Clicker with Aura UPDATE</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>💎 Diamond Clicker- AURA UPDATE 🌌</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -9,6 +11,7 @@
       background: linear-gradient(to bottom right, #e0f7ff, #f0fff4);
       padding: 20px;
     }
+
     button {
       font-size: 18px;
       padding: 10px 20px;
@@ -19,6 +22,7 @@
       color: white;
       user-select: none;
     }
+
     #diamond-button { background-color: #00bfff; }
     #gold-button { background-color: #daa520; }
     #emerald-button { background-color: #50c878; }
@@ -28,47 +32,44 @@
     #roll-aura-button { background-color: #ff1493; }
     .equip-button { background-color: #555; }
 
-    #counters { font-size: 26px; margin: 10px 0; }
-    #text-container { margin-top: 15px; font-size: 20px; color: #555; min-height: 30px; }
-    #aura-section { margin-top: 30px; background: #fff; padding: 20px; border-radius: 15px; box-shadow: 0 0 15px rgba(0,0,0,0.1); }
-
     #rank-button {
-      position: fixed;
-      top: 15px;
-      left: 15px;
-      background: rgba(0,0,0,0.6);
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      background: #444;
       color: white;
       padding: 8px 12px;
       border-radius: 6px;
       cursor: pointer;
-      z-index: 150;
-      font-size: 14px;
-      user-select: none;
+      z-index: 200;
     }
+
     #rank-panel {
-      position: fixed;
+      position: absolute;
       top: 60px;
-      left: 15px;
+      left: 20px;
       background: rgba(0,0,0,0.85);
       color: white;
       padding: 10px;
       border-radius: 8px;
       display: none;
-      z-index: 150;
-      max-height: 320px;
+      z-index: 200;
+      max-height: 300px;
       overflow-y: auto;
       font-size: 14px;
-      min-width: 160px;
+      min-width: 150px;
     }
-    #rank-panel h3 {
-      margin: 0 0 6px 0;
-      font-size: 16px;
-      text-align: center;
-    }
+
+    #counters { font-size: 26px; margin: 10px 0; }
+    #text-container { margin-top: 15px; font-size: 20px; color: #555; min-height: 30px; }
+    #aura-section { margin-top: 30px; background: #fff; padding: 20px; border-radius: 15px; box-shadow: 0 0 15px rgba(0,0,0,0.1); }
   </style>
 </head>
 <body>
-  <h1>💎 Gold & Emerald Clicker + AURA SYSTEM 🌌</h1>
+  <div id="rank-button">Ranks (Online)</div>
+  <div id="rank-panel"></div>
+
+  <h1>💎 Diamond Clicker- AURA UPDATE 🌌</h1>
   <div id="playerName"></div>
 
   <div id="counters">
@@ -78,8 +79,8 @@
   </div>
 
   <button id="diamond-button">Click 💎</button>
-  <button id="gold-button" disabled>Click 🪙</button>
-  <button id="emerald-button" disabled>Click 💚</button>
+  <button id="gold-button">Click 🪙</button>
+  <button id="emerald-button">Click 💚</button>
 
   <br>
   <button id="buy-gold-button">Buy Gold for 100 Diamonds</button>
@@ -88,14 +89,9 @@
   <hr>
 
   <h2>🔼 Upgrades</h2>
-  <button class="upgrade-button" id="upgrade-diamond">Upgrade Diamond (Cost: 500,000 💎)</button>
-  <div>Diamond Upgrade Level: <span id="diamond-upgrade-level">0</span></div>
-
-  <button class="upgrade-button" id="upgrade-gold" disabled>Upgrade Gold (Cost: 10,000,000 🪙)</button>
-  <div>Gold Upgrade Level: <span id="gold-upgrade-level">0</span></div>
-
-  <button class="upgrade-button" id="upgrade-emerald" disabled>Upgrade Emerald (Cost: 30,000,000 💚)</button>
-  <div>Emerald Upgrade Level: <span id="emerald-upgrade-level">0</span></div>
+  <button class="upgrade-button" id="upgrade-diamond">Upgrade Diamond (Cost: 500,000 💎)</button><br>
+  <button class="upgrade-button" id="upgrade-gold">Upgrade Gold (Cost: 10,000,000 🪙)</button><br>
+  <button class="upgrade-button" id="upgrade-emerald">Upgrade Emerald (Cost: 30,000,000 💚)</button>
 
   <div id="aura-section">
     <h2>🌠 Aura System</h2>
@@ -108,48 +104,33 @@
 
   <div id="text-container"></div>
 
-  <div id="rank-button">Ranks (Online)</div>
-  <div id="rank-panel"></div>
-
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getFirestore, doc, setDoc, getDoc, collection, query, orderBy, limit, getDocs, updateDoc }
+    import { getFirestore, doc, setDoc, getDoc, collection, query, orderBy, limit, getDocs, updateDoc } 
       from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
-    import { getAuth, signInAnonymously, onAuthStateChanged }
-      from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyAeS3jgX2iatIkI_jrCqW7bfyjXuF-QvmI",
-      authDomain: "clickercoin.firebaseapp.com",
-      projectId: "clickercoin",
-      storageBucket: "clickercoin.firebasestorage.app",
-      messagingSenderId: "1084556702855",
-      appId: "1:1084556702855:web:62ab02d23498f167d43422"
-    };
+  apiKey: "AIzaSyB7c4UCU7qpVecl5JM-wRSMnqFz9DCjdlA",
+  authDomain: "diamondclicker-b3a0a.firebaseapp.com",
+  projectId: "diamondclicker-b3a0a",
+  storageBucket: "diamondclicker-b3a0a.firebasestorage.app",
+  messagingSenderId: "334913006559",
+  appId: "1:334913006559:web:f1b73789e56c61d4a8b26a"
+};
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
-    const auth = getAuth(app);
 
-    let currentUser = null;
-    signInAnonymously(auth);
-    onAuthStateChanged(auth, user => currentUser = user);
-
-    // Player setup
     let playerName = localStorage.getItem("playerName");
     while (!playerName || playerName.trim() === "") {
-      playerName = prompt("Enter your name:");
+      playerName = prompt("Masukkan nama kamu (tidak boleh kosong):");
     }
     localStorage.setItem("playerName", playerName);
     document.getElementById("playerName").textContent = `👤 Player: ${playerName}`;
 
-    // Variables
-    let diamonds = parseInt(localStorage.getItem("diamondCount") || "0");
-    let gold = parseInt(localStorage.getItem("goldCount") || "0");
-    let emeralds = parseInt(localStorage.getItem("emeraldCount") || "0");
-    let diamondUpgradeLevel = parseInt(localStorage.getItem("diamondUpgradeLevel") || "0");
-    let goldUpgradeLevel = parseInt(localStorage.getItem("goldUpgradeLevel") || "0");
-    let emeraldUpgradeLevel = parseInt(localStorage.getItem("emeraldUpgradeLevel") || "0");
+    let diamonds = parseInt(localStorage.getItem("diamondCount")) || 0;
+    let gold = parseInt(localStorage.getItem("goldCount")) || 0;
+    let emeralds = parseInt(localStorage.getItem("emeraldCount")) || 0;
     let ownedAuras = JSON.parse(localStorage.getItem("ownedAuras") || "[]");
     let equippedAura = localStorage.getItem("equippedAura") || "None";
 
@@ -166,71 +147,127 @@
       { name: "Abyssal Hunter", rate: 1.0, bonus: { diamond:50000000, gold:55000000, emerald:55000000 }}
     ];
 
+    function getAuraByChance() {
+      const rand = Math.random() * 100;
+      let sum = 0;
+      for (let aura of auraList) {
+        sum += aura.rate;
+        if (rand <= sum) return aura;
+      }
+      return auraList[0];
+    }
+
+    function rollAura() {
+      if (emeralds < 20000) return showMessage("Not enough Emeralds for roll!");
+      emeralds -= 20000;
+      const aura = getAuraByChance();
+      showMessage(`🎆 You got a ${aura.name} Aura!`);
+      if (!ownedAuras.includes(aura.name)) ownedAuras.push(aura.name);
+      saveCounts();
+      renderOwnedAuras();
+    }
+
+    function equipAura(name) {
+      equippedAura = name;
+      saveCounts();
+      updateDisplay();
+      showMessage(`✨ Equipped ${name} Aura!`);
+    }
+
     function getAuraBonus() {
       const aura = auraList.find(a => a.name === equippedAura);
       return aura ? aura.bonus : { diamond:0, gold:0, emerald:0 };
     }
 
-    // Clicks
-    function addDiamond() { const b=getAuraBonus(); diamonds += (1+b.diamond); save(); updateDisplay(); saveHighScore(); }
-    function addGold() { if (gold>0){const b=getAuraBonus(); gold += (1+b.gold); save(); updateDisplay();} else showMsg("You need to unlock gold!"); }
-    function addEmerald() { if (emeralds>0){const b=getAuraBonus(); emeralds += (1+b.emerald); save(); updateDisplay();} else showMsg("You need to unlock emerald!"); }
+    document.getElementById("diamond-button").onclick = () => {
+      const bonus = getAuraBonus();
+      diamonds += 1 + bonus.diamond;
+      saveCounts();
+      updateDisplay();
+    };
 
-    // Buy unlocks
-    function buyGold() {
-      if (diamonds >= 100 && gold === 0) {
-        diamonds -= 100; gold = 1;
-        showMsg("Gold unlocked!");
-      } else showMsg("Not enough diamonds!");
-      save(); updateDisplay();
+    document.getElementById("gold-button").onclick = () => {
+      const bonus = getAuraBonus();
+      gold += 1 + bonus.gold;
+      saveCounts();
+      updateDisplay();
+    };
+
+    document.getElementById("emerald-button").onclick = () => {
+      const bonus = getAuraBonus();
+      emeralds += 1 + bonus.emerald;
+      saveCounts();
+      updateDisplay();
+    };
+
+    document.getElementById("buy-gold-button").onclick = () => {
+      if (diamonds >= 100) {
+        diamonds -= 100;
+        gold++;
+        saveCounts();
+        updateDisplay();
+      } else showMessage("Need 100 Diamonds!");
+    };
+
+    document.getElementById("buy-emerald-button").onclick = () => {
+      if (diamonds >= 1000 && gold >= 700) {
+        diamonds -= 1000;
+        gold -= 700;
+        emeralds++;
+        saveCounts();
+        updateDisplay();
+      } else showMessage("Need more Diamonds or Gold!");
+    };
+
+    document.getElementById("roll-aura-button").onclick = rollAura;
+
+    async function saveHighScore() {
+      const ref = doc(db, "auraScores", playerName);
+      const snap = await getDoc(ref);
+      if (!snap.exists()) {
+        await setDoc(ref, { name: playerName, diamonds });
+      } else {
+        const oldScore = snap.data().diamonds || 0;
+        if (diamonds > oldScore) {
+          await updateDoc(ref, { name: playerName, diamonds });
+        }
+      }
     }
 
-    function buyEmerald() {
-      if (diamonds >= 1000 && gold >= 700 && emeralds === 0) {
-        diamonds -= 1000; gold -= 700; emeralds = 1;
-        showMsg("Emerald unlocked!");
-      } else showMsg("Need more 💎 or 🪙!");
-      save(); updateDisplay();
+    const rankButton = document.getElementById("rank-button");
+    const rankPanel = document.getElementById("rank-panel");
+
+    async function fetchLeaderboard() {
+      const q = query(collection(db, "auraScores"), orderBy("diamonds", "desc"), limit(30));
+      const snap = await getDocs(q);
+      return snap.docs.map((doc, i) => {
+        const data = doc.data();
+        return `${i + 1}. ${data.name || "Anon"} — ${data.diamonds} 💎`;
+      });
     }
 
-    function rollAura() {
-      if (emeralds < 20000) return showMsg("Not enough Emeralds!");
-      emeralds -= 20000;
-      const aura = getAuraByChance();
-      if (!ownedAuras.includes(aura.name)) ownedAuras.push(aura.name);
-      showMsg(`🎆 You got ${aura.name} Aura!`);
-      save(); renderOwnedAuras(); updateDisplay();
-    }
+    let rankRefreshInterval = null;
 
-    function getAuraByChance() {
-      const rand = Math.random() * 100; let sum = 0;
-      for (let aura of auraList) { sum += aura.rate; if (rand <= sum) return aura; }
-      return auraList[0];
-    }
+    rankButton.addEventListener("click", async () => {
+      if (rankPanel.style.display === "block") {
+        rankPanel.style.display = "none";
+        clearInterval(rankRefreshInterval);
+        rankRefreshInterval = null;
+        return;
+      }
 
-    function equipAura(name) { equippedAura = name; save(); updateDisplay(); showMsg(`✨ Equipped ${name}!`); }
+      rankPanel.style.display = "block";
+      rankPanel.innerHTML = "<h3>Ranks (Online)</h3><div>Loading…</div>";
 
-    function save() {
-      localStorage.setItem("diamondCount", diamonds);
-      localStorage.setItem("goldCount", gold);
-      localStorage.setItem("emeraldCount", emeralds);
-      localStorage.setItem("ownedAuras", JSON.stringify(ownedAuras));
-      localStorage.setItem("equippedAura", equippedAura);
-      localStorage.setItem("diamondUpgradeLevel", diamondUpgradeLevel);
-      localStorage.setItem("goldUpgradeLevel", goldUpgradeLevel);
-      localStorage.setItem("emeraldUpgradeLevel", emeraldUpgradeLevel);
-    }
+      async function refreshRanks() {
+        const list = await fetchLeaderboard();
+        const time = new Date().toLocaleTimeString();
+        rankPanel.innerHTML = `<h3>Ranks (Online)</h3>${list.join("<br>")}<br><br><small>Updated: ${time}</small>`;
+      }
 
-    function updateDisplay() {
-      document.getElementById("diamond-count").innerText = diamonds.toLocaleString();
-      document.getElementById("gold-count").innerText = gold.toLocaleString();
-      document.getElementById("emerald-count").innerText = emeralds.toLocaleString();
-      document.getElementById("equipped-aura").innerText = equippedAura;
-      document.getElementById("gold-button").disabled = gold <= 0;
-      document.getElementById("emerald-button").disabled = emeralds <= 0;
-      document.getElementById("upgrade-gold").disabled = gold <= 0;
-      document.getElementById("upgrade-emerald").disabled = emeralds <= 0;
-    }
+      await refreshRanks();
+      rankRefreshInterval = setInterval(refreshRanks, 10000);
+    });
 
     function renderOwnedAuras() {
       const div = document.getElementById("owned-auras");
@@ -238,63 +275,37 @@
       ownedAuras.forEach(aura => {
         const btn = document.createElement("button");
         btn.className = "equip-button";
-        btn.innerText = aura + " (Equip)";
+        btn.innerText = `${aura} (Equip)`;
         btn.onclick = () => equipAura(aura);
         div.appendChild(btn);
       });
+      document.getElementById("equipped-aura").innerText = equippedAura;
     }
 
-    function showMsg(msg) { const el = document.getElementById("text-container"); el.innerText = msg; setTimeout(() => el.innerText = "", 2000); }
-
-    document.getElementById("diamond-button").onclick = addDiamond;
-    document.getElementById("gold-button").onclick = addGold;
-    document.getElementById("emerald-button").onclick = addEmerald;
-    document.getElementById("buy-gold-button").onclick = buyGold;
-    document.getElementById("buy-emerald-button").onclick = buyEmerald;
-    document.getElementById("roll-aura-button").onclick = rollAura;
-
-    renderOwnedAuras(); updateDisplay();
-
-    // Firebase leaderboard
-    async function saveHighScore() {
-      if (!currentUser) return;
-      const ref = doc(db, "auraScores", currentUser.uid);
-      const snap = await getDoc(ref);
-      if (!snap.exists()) await setDoc(ref, { name: playerName, diamonds });
-      else if (diamonds > (snap.data().diamonds || 0)) await updateDoc(ref, { name: playerName, diamonds });
+    function updateDisplay() {
+      document.getElementById("diamond-count").textContent = diamonds.toLocaleString();
+      document.getElementById("gold-count").textContent = gold.toLocaleString();
+      document.getElementById("emerald-count").textContent = emeralds.toLocaleString();
+      document.getElementById("equipped-aura").innerText = equippedAura;
     }
 
-    const rankButton = document.getElementById("rank-button");
-    const rankPanel = document.getElementById("rank-panel");
-    let rankRefreshInterval = null;
-
-    async function fetchLeaderboard() {
-      const q = query(collection(db, "auraScores"), orderBy("diamonds", "desc"), limit(30));
-      const snap = await getDocs(q);
-      return snap.docs.map((doc, i) => {
-        const data = doc.data();
-        return `${i + 1}. ${data.name || "Anon"} — ${data.diamonds.toLocaleString()} 💎`;
-      });
+    function showMessage(msg) {
+      const el = document.getElementById("text-container");
+      el.innerText = msg;
+      setTimeout(() => el.innerText = "", 2000);
     }
 
-    rankButton.addEventListener("click", async () => {
-      if (rankPanel.style.display === "block") {
-        rankPanel.style.display = "none";
-        clearInterval(rankRefreshInterval);
-        return;
-      }
-      rankPanel.style.display = "block";
-      rankPanel.innerHTML = "<h3>Ranks (Online)</h3><div>Loading…</div>";
-      async function refreshRanks() {
-        const list = await fetchLeaderboard();
-        const time = new Date().toLocaleTimeString();
-        const myRank = list.findIndex(line => line.includes(playerName));
-        const rankText = myRank >= 0 ? `<br><b>👑 Your Rank: #${myRank + 1}</b>` : "";
-        rankPanel.innerHTML = `<h3>Ranks (Online)</h3>${list.join("<br>")}${rankText}<br><br><small>Updated: ${time}</small>`;
-      }
-      await refreshRanks();
-      rankRefreshInterval = setInterval(refreshRanks, 10000);
-    });
+    function saveCounts() {
+      localStorage.setItem("diamondCount", diamonds);
+      localStorage.setItem("goldCount", gold);
+      localStorage.setItem("emeraldCount", emeralds);
+      localStorage.setItem("ownedAuras", JSON.stringify(ownedAuras));
+      localStorage.setItem("equippedAura", equippedAura);
+      saveHighScore();
+    }
+
+    renderOwnedAuras();
+    updateDisplay();
   </script>
 </body>
 </html>
